force-app/main/default/objects/C360_BuyingPerformanceMonthlyTOP__c.object
<CustomObject>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A9</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>BG91</fullName>
                </value>
                <value>
                    <fullName>BG95</fullName>
                </value>
                <value>
                    <fullName>BKERO</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BZ by Product</fullName>
                </value>
                <value>
                    <fullName>C4-C7</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>CRUDE BZ</fullName>
                </value>
                <value>
                    <fullName>CRUDE TOL</fullName>
                </value>
                <value>
                    <fullName>DRAINHC</fullName>
                </value>
                <value>
                    <fullName>FO &quot;C&quot; 2% S</fullName>
                </value>
                <value>
                    <fullName>FO (EXP)</fullName>
                </value>
                <value>
                    <fullName>FO380E</fullName>
                </value>
                <value>
                    <fullName>FO5</fullName>
                </value>
                <value>
                    <fullName>FOA</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>GH91</fullName>
                </value>
                <value>
                    <fullName>GH95</fullName>
                </value>
                <value>
                    <fullName>GH9520</fullName>
                </value>
                <value>
                    <fullName>HCUB</fullName>
                </value>
                <value>
                    <fullName>HEAVIES</fullName>
                </value>
                <value>
                    <fullName>HEAVY OIL</fullName>
                </value>
                <value>
                    <fullName>HLOR</fullName>
                </value>
                <value>
                    <fullName>HSD</fullName>
                </value>
                <value>
                    <fullName>HSD Base</fullName>
                </value>
                <value>
                    <fullName>HSD EXP</fullName>
                </value>
                <value>
                    <fullName>HSD-B0</fullName>
                </value>
                <value>
                    <fullName>HSD-B0N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductNameText__c</fullName>
        <description>Product Name Text</description>
        <label>Product Name Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductWithUnit__c</fullName>
        <formula>Product__r.Name &amp;&quot; / &quot;&amp;  TEXT(VolumeLiftingUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product with Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Name</description>
        <label>Product Name</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipName>TOP_Month_Buying_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RevenueLocal__c</fullName>
        <description>From BI</description>
        <label>Revenue (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevenueUSD__c</fullName>
        <description>From BI</description>
        <label>Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesGroup__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesmode__c</fullName>
        <label>Sales mode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPoint__c</fullName>
        <description>From SAP, Allocation, and BI</description>
        <label>Delivery Mode (Shipping Point)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingPoint</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShiptoCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Country</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Monthly Buying Performance</relationshipLabel>
        <relationshipName>Monthly_Buying_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-to</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TOP_Month_Buying_Performance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShiptocountryText__c</fullName>
        <label>Ship to country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToText__c</fullName>
        <label>Sold to Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subindustry__c</fullName>
        <label>Sub industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI001</fullName>
                    <label>ABS</label>
                </value>
                <value>
                    <fullName>SI002</fullName>
                    <label>ADHESIVE</label>
                </value>
                <value>
                    <fullName>SI003</fullName>
                    <label>AGROCHEMICAL</label>
                </value>
                <value>
                    <fullName>SI004</fullName>
                    <label>ANIMAL FEED</label>
                </value>
                <value>
                    <fullName>SI005</fullName>
                    <label>ASPHALT</label>
                </value>
                <value>
                    <fullName>SI006</fullName>
                    <label>AUTOMOTIVE PARTS</label>
                </value>
                <value>
                    <fullName>SI007</fullName>
                    <label>BIODIESEL</label>
                </value>
                <value>
                    <fullName>SI008</fullName>
                    <label>BLENDING</label>
                </value>
                <value>
                    <fullName>SI009</fullName>
                    <label>CAMERA PARTS</label>
                </value>
                <value>
                    <fullName>SI010</fullName>
                    <label>CLEANING</label>
                </value>
                <value>
                    <fullName>SI011</fullName>
                    <label>COATING</label>
                </value>
                <value>
                    <fullName>SI012</fullName>
                    <label>COATINGS/PAINTS</label>
                </value>
                <value>
                    <fullName>SI013</fullName>
                    <label>COMPETITOR</label>
                </value>
                <value>
                    <fullName>SI014</fullName>
                    <label>COSMETICS</label>
                </value>
                <value>
                    <fullName>SI015</fullName>
                    <label>DRUM SUPPLIER</label>
                </value>
                <value>
                    <fullName>SI016</fullName>
                    <label>EDIBLE OIL</label>
                </value>
                <value>
                    <fullName>SI017</fullName>
                    <label>EPS</label>
                </value>
                <value>
                    <fullName>SI018</fullName>
                    <label>EXTRACTION</label>
                </value>
                <value>
                    <fullName>SI019</fullName>
                    <label>FERTILIZER</label>
                </value>
                <value>
                    <fullName>SI020</fullName>
                    <label>FOAM</label>
                </value>
                <value>
                    <fullName>SI021</fullName>
                    <label>FOOD</label>
                </value>
                <value>
                    <fullName>SI022</fullName>
                    <label>FOOD SUPPLEMENT</label>
                </value>
                <value>
                    <fullName>SI023</fullName>
                    <label>FOOD SUPPLIED</label>
                </value>
                <value>
                    <fullName>SI024</fullName>
                    <label>FOOTWEAR</label>
                </value>
                <value>
                    <fullName>SI025</fullName>
                    <label>FUNGICIDE</label>
                </value>
                <value>
                    <fullName>SI026</fullName>
                    <label>FURNITURE</label>
                </value>
                <value>
                    <fullName>SI027</fullName>
                    <label>HOTEL</label>
                </value>
                <value>
                    <fullName>SI028</fullName>
                    <label>HOUSEHOLD</label>
                </value>
                <value>
                    <fullName>SI029</fullName>
                    <label>HYDROGENPEROXIDE</label>
                </value>
                <value>
                    <fullName>SI030</fullName>
                    <label>INK</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subproductname__c</fullName>
        <label>Sub-product name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplyGroup__c</fullName>
        <label>Supply Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TLBDistributionChannel__c</fullName>
        <label>TLB Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>BLENDING</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>RE SELL</fullName>
                </value>
                <value>
                    <fullName>INDOCHINA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TLBProductGroup__c</fullName>
        <label>TLB Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Productgroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierType__c</fullName>
        <label>Tier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VolumeAllocation__c</fullName>
        <description>From Allocation</description>
        <label>Volume Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeKGS__c</fullName>
        <description>From Allocation</description>
        <label>Volume KGS.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeLTS30__c</fullName>
        <description>From Allocation</description>
        <label>Volume LTS@ 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeLTS__c</fullName>
        <description>From Allocation</description>
        <label>Volume LTS.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeLiftingUnit__c</fullName>
        <description>From Allocation Volume Lifting Unit</description>
        <label>Volume Unit.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VolumeLifting__c</fullName>
        <description>From Allocation</description>
        <label>Volume Lifting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeMTDAllocation__c</fullName>
        <label>Volume MTD Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeMTDLifting__c</fullName>
        <description>Use in Lifting and Allocation Report</description>
        <inlineHelpText>Use in Lifting and Allocation Report</inlineHelpText>
        <label>Volume MTD Lifting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeMTON__c</fullName>
        <label>Volume MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeUnit__c</fullName>
        <label>Volume Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>From SAP</description>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WholesalePrice__c</fullName>
        <description>From Allocation</description>
        <label>Wholesale Price (Excl.Vat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDRevenueLastYearLocal__c</fullName>
        <description>From BI</description>
        <label>YTD Revenue Last Year (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDRevenueLastYearUSD__c</fullName>
        <description>From BI</description>
        <label>YTD Revenue Last Year (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearMonth__c</fullName>
        <formula>IF( ISPICKVAL( SalesOrganization__c , &apos;1300&apos;) || ISPICKVAL( SalesOrganization__c , &apos;1700&apos;) , 
TEXT(YEAR(Date__c ))&amp;&apos;_&apos;&amp;TEXT(MONTH(Date__c )), 
Year__c &amp;&apos;_&apos;&amp; Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Monthly Buying Performance</label>
    <listViews>
        <fullName>Lifting_Allocation</fullName>
        <columns>NAME</columns>
        <columns>YearMonth__c</columns>
        <columns>SalesOrganization__c</columns>
        <columns>DistributionChannel__c</columns>
        <columns>ShippingPoint__c</columns>
        <columns>Product__c</columns>
        <columns>VolumeLifting__c</columns>
        <columns>VolumeLiftingUnit__c</columns>
        <columns>NetValueLocal__c</columns>
        <columns>CurrencyLocal__c</columns>
        <filterScope>Mine</filterScope>
        <label>Lifting Allocation</label>
        <sharedTo>
            <group>C360_All1100</group>
            <group>C360_All1400</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Monthly_Performance</fullName>
        <columns>NAME</columns>
        <columns>YearMonth__c</columns>
        <columns>SalesOrganization__c</columns>
        <columns>DistributionChannel__c</columns>
        <columns>ShippingPoint__c</columns>
        <columns>Product__c</columns>
        <columns>VolumeLifting__c</columns>
        <columns>VolumeLiftingUnit__c</columns>
        <columns>NetValueLocal__c</columns>
        <columns>CurrencyLocal__c</columns>
        <filterScope>Mine</filterScope>
        <label>Monthly Performance</label>
    </listViews>
    <listViews>
        <fullName>TX_Monthly_Performance</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>SalesOrganization__c</columns>
        <columns>DistributionChannel__c</columns>
        <columns>Product__c</columns>
        <columns>VolumeMTON__c</columns>
        <columns>NetValueLocal__c</columns>
        <columns>NetProfitLocal__c</columns>
        <columns>CurrencyLocal__c</columns>
        <filterScope>Mine</filterScope>
        <label>TX Monthly Performance</label>
        <sharedTo>
            <group>C360_9100</group>
            <group>C360_9300</group>
            <group>C360_All2000</group>
            <group>C360_All9200</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BPM{00000000}</displayFormat>
        <label>Monthly Buying Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Lifting</fullName>
        <active>true</active>
        <label>Lifting</label>
    </recordTypes>
    <recordTypes>
        <fullName>LiftingAllocation</fullName>
        <active>true</active>
        <description>TOP</description>
        <label>Lifting Allocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlyBuyingPerformance</fullName>
        <active>true</active>
        <description>TOP Group</description>
        <label>Monthly Buying Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>TXMonthlyPerformance</fullName>
        <active>true</active>
        <description>TS Group</description>
        <label>TX Monthly Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>TXTargetMonthlyPerformance</fullName>
        <active>true</active>
        <description>TS Group</description>
        <label>TX Target Monthly Performance</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>